--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "connected_api",
   "version": "1.0.0",
+  "type":"module",
   "description": "REST API for \"Connected\" social networking app",
   "main": "index.js",
   "scripts": {
+    "start":"node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Thiha Min Zaw",
