--- a/package.json
+++ b/package.json
@@ -11,126 +11,18 @@
   "author": "Thiha Min Zaw",
   "license": "ISC",
   "dependencies": {
-    "accepts": "^1.3.8",
-    "append-field": "^1.0.0",
-    "array-flatten": "^1.1.1",
-    "base64-js": "^1.5.1",
-    "basic-auth": "^2.0.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
-    "bowser": "^2.11.0",
-    "bson": "^4.7.0",
-    "buffer": "^5.7.1",
-    "buffer-from": "^1.1.2",
-    "busboy": "^1.6.0",
-    "bytes": "^3.1.2",
-    "call-bind": "^1.0.2",
-    "concat-stream": "^1.6.2",
-    "content-disposition": "^0.5.4",
-    "content-type": "^1.0.4",
-    "cookie": "^0.5.0",
-    "cookie-signature": "^1.0.6",
-    "core-util-is": "^1.0.3",
     "cors": "^2.8.5",
-    "debug": "^2.6.9",
-    "depd": "^2.0.0",
-    "destroy": "^1.2.0",
     "dotenv": "^16.0.3",
-    "ee-first": "^1.1.1",
-    "encodeurl": "^1.0.2",
-    "escape-html": "^1.0.3",
-    "etag": "^1.8.1",
     "express": "^4.18.2",
-    "fast-xml-parser": "^4.0.11",
-    "finalhandler": "^1.2.0",
-    "forwarded": "^0.2.0",
-    "fresh": "^0.5.2",
-    "function-bind": "^1.1.1",
-    "get-intrinsic": "^1.1.3",
-    "has": "^1.0.3",
-    "has-symbols": "^1.0.3",
-    "helmet": "^6.0.1",
-    "http-errors": "^2.0.0",
-    "iconv-lite": "^0.4.24",
-    "ieee754": "^1.2.1",
-    "inherits": "^2.0.4",
-    "ip": "^2.0.0",
-    "ipaddr.js": "^1.9.1",
-    "isarray": "^1.0.0",
+    "gridfs-stream": "^1.1.1",
+    "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
-    "kareem": "^2.5.0",
-    "media-typer": "^0.3.0",
-    "memory-pager": "^1.5.0",
-    "merge-descriptors": "^1.0.1",
-    "methods": "^1.1.2",
-    "mime": "^1.6.0",
-    "mime-db": "^1.52.0",
-    "mime-types": "^2.1.35",
-    "minimist": "^1.2.7",
-    "mkdirp": "^0.5.6",
-    "mongodb": "^4.12.1",
-    "mongodb-connection-string-url": "^2.6.0",
-    "mongoose": "^6.8.0",
+    "mongoose": "^6.7.0",
     "morgan": "^1.10.0",
-    "mpath": "^0.9.0",
-    "mquery": "^4.0.3",
-    "ms": "^2.0.0",
     "multer": "^1.4.5-lts.1",
-    "negotiator": "^0.6.3",
-    "object-assign": "^4.1.1",
-    "object-inspect": "^1.12.2",
-    "on-finished": "^2.4.1",
-    "on-headers": "^1.0.2",
-    "parseurl": "^1.3.3",
-    "path": "^0.12.7",
-    "path-to-regexp": "^0.1.7",
-    "process": "^0.11.10",
-    "process-nextick-args": "^2.0.1",
-    "proxy-addr": "^2.0.7",
-    "punycode": "^2.1.1",
-    "qs": "^6.11.0",
-    "range-parser": "^1.2.1",
-    "raw-body": "^2.5.1",
-    "readable-stream": "^2.3.7",
-    "safe-buffer": "^5.2.1",
-    "safer-buffer": "^2.1.2",
-    "saslprep": "^1.0.3",
-    "send": "^0.18.0",
-    "serve-static": "^1.15.0",
-    "setprototypeof": "^1.2.0",
-    "side-channel": "^1.0.4",
-    "sift": "^16.0.1",
-    "smart-buffer": "^4.2.0",
-    "socks": "^2.7.1",
-    "sparse-bitfield": "^3.0.3",
-    "statuses": "^2.0.1",
-    "streamsearch": "^1.1.0",
-    "string_decoder": "^1.1.1",
-    "strnum": "^1.0.5",
-    "toidentifier": "^1.0.1",
-    "tr46": "^3.0.0",
-    "tslib": "^2.4.1",
-    "type-is": "^1.6.18",
-    "typedarray": "^0.0.6",
-    "unpipe": "^1.0.0",
-    "util": "^0.10.4",
-    "util-deprecate": "^1.0.2",
-    "utils-merge": "^1.0.1",
-    "uuid": "^8.3.2",
-    "vary": "^1.1.2",
-    "webidl-conversions": "^7.0.0",
-    "whatwg-url": "^11.0.0",
-    "xtend": "^4.0.2"
+    "multer-gridfs-storage": "^5.0.2"
   },
-  "devDependencies": {
-    "body-parser": "^1.20.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "helmet": "^6.0.1",
-    "mongoose": "^6.8.0",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7"
-  }
+  "devDependencies": {} 
 }
