--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "connected_api",
   "version": "1.0.0",
-  "type":"module",
+  "type": "module",
   "description": "REST API for \"Connected\" social networking app",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Thiha Min Zaw",
@@ -21,8 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2"
-  },
-  "devDependencies": {} 
+  }
 }
